spacing issues

--- a/src/container/Home/style.module.css
+++ b/src/container/Home/style.module.css
@@ -1,6 +1,6 @@
 .hero-image {
   background-image: url(../../assests/headerbg.png);
-  height: 40rem;
+  height: 35rem;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -19,7 +19,7 @@
 }
 .hero-text {
   position: absolute;
-  top: 27%;
+  top: 18%;
 }
 .card {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -40,8 +40,14 @@
   .res {
     height: 64rem;
   }
-  .card{
+  .card {
     width: 8rem;
+  }
+  p {
+    font-size: 0.75rem !important;
+  }
+  .hero-image {
+    height: 32rem;
   }
 }
 
@@ -52,30 +58,51 @@
   .res {
     height: 51rem;
   }
-  .card{
+  .card {
     width: 8rem;
   }
 }
 @media (min-width: 770px) and (max-width: 912px) {
   .hero-text {
-    top: 10%;
+    top: 16%;
+  }
+  p{
+    font-size: x-small;
+  }
+  .hero-image {
+    height: 24rem;
   }
 }
 @media (min-width: 767px) and (max-width: 992px) {
   .hero-text {
-    top: 10%;
+    top: 16%;
   }
   .res {
     height: 55rem;
+  }
+  .hero-image {
+    height: 26rem;
+  }
+  p {
+    font-size: x-small !important;
   }
 }
 @media (min-width: 992px) and (max-width: 1075px) {
   .res {
     height: 40rem;
   }
+  p {
+    font-size: 0.875rem !important;
+  }
+  .hero-image {
+    height: 33rem;
+  }
 }
 @media (min-width: 920px) and (max-width: 1180px) {
   .hero-text {
     top: 15%;
+  }
+  p {
+    font-size: 0.875rem !important;
   }
 }
